# m2_hw13

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: conf.py  index.rst
docs/source/: crud.rst  modules.rst
project/: alembic.ini  crud.py  database.py  main.py  models.py  security.py
project/alembic/: env.py
project/alembic/versions/: 15b387c3e522_initial.py  2fe9eeb3ab96_update_1.py  9195809e5134_update.py  b12ce8b6a08f_1.py
project/tests/: test1.py  test2.py
